It should be possible to iterate just the values (and not the counts) of a HashCountedSet https://bugs.webkit.org/show_bug.cgi?id=178169

Patch by Sam Weinig <sam@webkit.org> on 2017-10-12
Reviewed by Daniel Bates.

Source/WTF:

Cleanup (fix indentation, simplify type names, adopt using), and add a values() range to
HashCountedSet. This will allow getting a Vector of all the values (and not the counts)
using the new copyToVector.

* wtf/HashCountedSet.h:

Tools:

* TestWebKitAPI/Tests/WTF/HashCountedSet.cpp:
(TestWebKitAPI::TEST):
Add test for HashCountedSet's new values() range.

Canonical link: https://commits.webkit.org/194460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223236 268f45cc-cd09-0410-ab3c-d52691b4dbfc